umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_chemdoodle_oxylate_3D.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 74
bond_count: 79
sum_formula: C36H34O3S
graph6: ~?@I_a?OKG@GO?_K_?G?A??O?A??C??G??A??@???G??@???A???A???@????O????K????W??@????@?????_????G?????@_????BC?????????C?????A??????A??????O?_?????@??????A????????_??????G??????@???????C???????G???????G???????C???????@????????G????????_???????@????????@?????????G????????A?????????O????????@??????????_????????@?????????@??????????O?????????C??????????_?????????@??????????A??????????A???????????_??????????G??????????@???????????A???????????C???????????C??????
