umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_chemsketch_newyear2015.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 147
bond_count: 135
sum_formula: C131H2LiN2O11
graph6: ~?ARsP??CA?O@?B????_?O?A??K??_?????C??A???????_??@???@????????G???A????G????W????G????C????B???????????_????@?????A?????C??????O????????????C??????O??????O??????G??????B???????????????_??????A???????A???????@????????O????????????????C????????O????????_????????O????????G???????????????????_????????A?????????A?????????@_?????????O?????????@?????????????????????G??????????G??????????O??????????A???????????????????????_??????????B???????????C????????????_???????????????????????@????????????G????????????O????????????W????????????O????????????A???????????????????????????_????????????A?????????????C?????????????A?????????????@?????????????????????????????C??????????????O??????????????O??????????????K??????????????A???????????????G??????????????????????????????@???????????????A???????????????@????????????????W???????????????C?????????????????????????????????G????????????????O????????????????G????????????????B?????????????????_??????????????????????????????????@?????????????????A?????????????????A????????????????????????????????????@??????????????????C??????????????????G?????????????????????????????????????C??????????????????B???????????????????_???????????????????_??????????????????????????????????????@???????????????????@????????????????????O???????????????????@?????????????????????????????????????????G????????????????????G????????????????????G????????????????????G?????????????????????O??????????????????????????????????????????@?????????????????????B?????????????????????A??????????????????????G????????????????????????????????????????????C??????????????????????O??????????????????????O??????????????????????K??????????????????????A???????????????????????G??????????????????????????????????????????????@???????????????????????A???????????????????????A????????????????????????_
