umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_chemspider_5773.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 30
sum_formula: C21H4O2
graph6: ZhCGGC@?G?_@?@??_AG?@?_G??G??HG?C??@??A??G??O??@???G???G????
